--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -20,11 +20,13 @@
             android:textColor="@color/white"/>
 
         <EditText
+            android:id="@+id/edtEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="email@email.com"
             android:textSize="14sp"
             android:layout_marginTop="8dp"
+            android:inputType="textEmailAddress"
             android:background="@drawable/bg_edit"
             android:padding="14dp"/>
 
@@ -36,6 +38,7 @@
             android:textColor="@color/white"/>
 
         <EditText
+            android:id="@+id/edtPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="******"
@@ -46,6 +49,7 @@
             android:padding="14dp"/>
 
         <android.widget.Button
+            android:id="@+id/btnLogin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
@@ -78,6 +82,16 @@
                 android:textColor="@color/white"/>
 
         </LinearLayout>
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:visibility="invisible"
+            tools:visibility="visible"
+            android:layout_gravity="center_horizontal"
+            android:indeterminateTint="@color/white"/>
 
     </LinearLayout>
 
