--- a/app/src/main/res/layout/fragment_recover_account.xml
+++ b/app/src/main/res/layout/fragment_recover_account.xml
@@ -23,7 +23,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:text="Recuperar conta"
+                android:text="@string/text_recover_account"
                 android:textColor="@color/white"/>
 
         </androidx.appcompat.widget.Toolbar>
@@ -50,7 +50,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:text="E-mail"
+                android:text="@string/text_email"
                 android:inputType="textEmailAddress"
                 android:textColor="@color/white" />
 
@@ -60,7 +60,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:background="@drawable/bg_edit"
-                android:hint="email@email.com"
+                android:hint="@string/text_informe_seu_email"
                 android:inputType="textEmailAddress"
                 android:padding="14dp"
                 android:textSize="14sp" />
@@ -71,7 +71,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="32dp"
                 android:background="@drawable/bg_button"
-                android:text="Enviar"
+                android:text="@string/text_button_enviar"
                 android:textAllCaps="false"
                 android:textColor="@color/color_default" />
 
