--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -23,8 +23,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:text="Criar conta"
-                android:textColor="@color/white"/>
+                android:text="@string/text_create_account"
+                android:textColor="@color/white" />
 
         </androidx.appcompat.widget.Toolbar>
 
@@ -50,7 +50,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:text="E-mail"
+                android:text="@string/text_email"
                 android:textColor="@color/white" />
 
             <EditText
@@ -60,7 +60,7 @@
                 android:layout_marginTop="8dp"
                 android:background="@drawable/bg_edit"
                 android:inputType="textEmailAddress"
-                android:hint="email@email.com"
+                android:hint="@string/text_informe_seu_email"
                 android:padding="14dp"
                 android:textSize="14sp" />
 
@@ -68,7 +68,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:text="Senha"
+                android:text="@string/text_password"
                 android:textColor="@color/white" />
 
             <EditText
@@ -77,7 +77,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:background="@drawable/bg_edit"
-                android:hint="******"
+                android:hint="@string/text_informe_sua_senha"
                 android:inputType="textPassword"
                 android:padding="14dp"
                 android:textSize="14sp" />
@@ -88,7 +88,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="32dp"
                 android:background="@drawable/bg_button"
-                android:text="Criar conta"
+                android:text="@string/text_button_register_fragment"
                 android:textAllCaps="false"
                 android:textColor="@color/color_default" />
 
