--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,12 @@
     <color name="colorTextHint">#AEDFFD</color>
 
     <color name="color_default">#03B6FC</color>
+
+    <color name="color_delete">#FF4C3B</color>
+    <color name="color_edit">#03B6FC</color>
+    <color name="color_details">#04D5C1</color>
+
+    <color name="color_todo">#FF7803</color>
+    <color name="color_doing">#03B6FC</color>
+    <color name="color_done">#04D5C1</color>
 </resources>
