--- a/app/src/main/res/layout/fragment_task_form.xml
+++ b/app/src/main/res/layout/fragment_task_form.xml
@@ -48,13 +48,13 @@
                 android:id="@+id/textView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/text_task"
+                android:text="@string/text_task_description"
                 android:textColor="@android:color/white"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <EditText
-                android:id="@+id/editText"
+                android:id="@+id/edtTaskDescription"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
@@ -74,7 +74,7 @@
                 android:text="@string/text_status_task"
                 android:textColor="@android:color/white"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/editText" />
+                app:layout_constraintTop_toBottomOf="@+id/edtTaskDescription" />
 
             <RadioGroup
                 android:id="@+id/radioGroup"
@@ -86,14 +86,17 @@
                 app:layout_constraintTop_toBottomOf="@+id/textView2">
 
                 <RadioButton
+                    android:id="@+id/rbTodo"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:checked="true"
                     android:buttonTint="@android:color/white"
                     android:text="@string/text_todo"
                     android:textColor="@android:color/white" />
 
                 <RadioButton
+                    android:id="@+id/rbDoing"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -102,6 +105,7 @@
                     android:textColor="@android:color/white" />
 
                 <RadioButton
+                    android:id="@+id/rbDone"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
